# windfall-labs

./: .env.example  .gitignore  CODING_GUIDELINES.md  README.md  docker-compose.yml  iteration-log.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-optional.txt  requirements.txt
backend/app/: main.py
backend/data/: genuine_674.csv  leaderboards.json  missing_screener.csv  paper_sim.json
backend/grids/: momentum.json  wf_quick.json
backend/scripts/: batch_client.py  bhavcopy_ingest.py  build_ca_factor.py  build_membership.py  build_paper_sim.py  build_pit_mcap.py  curate_leaderboards.py  data_audit.py  extend_pit_mcap_dead.py  fix_iter23_renames_ohlc.py  gen_dead_list.py  index_ingest.py  ingest_fundamentals.py  load_data.py  load_trendlyne.py  load_v2.py  migrate_f5_delistings.py  nightly.py  phase3_build.py  phase3_reconcile.py  rebuild_pit_mcap_ca.py  run_validation.py  seed_paper_book.py  validate_own_dvm.py
backend/strategies/: breakout_validation.json  dvm_monthly.json  momentum_blend.json  momentum_regime.json  momentum_v22.json
backend/tests/: conftest.py  test_batch_client.py  test_batch_endpoint_stop.py  test_batch_grid_allowlist.py  test_batch_resolve_key.py  test_bhavcopy.py  test_blend_rank.py  test_ca_factor.py  test_costs.py  test_durability_history.py  test_engine_no_lookahead.py  test_factor_timing.py  test_fundamentals.py  test_indicators.py  test_insight_endpoints.py  test_iter32_factor_library.py  test_iter33_nse_gate.py  test_iter34_rename.py  test_live_signals_step.py  test_metrics.py  test_own_dvm.py  test_regime.py  (+8 more)
(+168 files in other folders)
